--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,8 +55,10 @@ nav:
     - 2025 年 11 月:
       - C# SOLID 原则: Artical/csharp-SOLID.md
       - C# 架构设计: Artical/csharp-architecture-design.md
+      - SerializeReferenceAttribute: Artical/serializereference-attribute.md
     - Odin Inspector:
       - Visual Designer 设计: Artical/OdinInspector/visual-designer.md
+      - 重复打开菜单的问题: Artical/OdinInspector/auto-open-gettingstarted.md
   - 关于 Odin Inspector 必读: OdinInspector-license.md
  
 # Configuration
